--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Breakpoints_v2.xcbkptlist
 MetalFilterCamera.xcodeproj/project.xcworkspace/xcuserdata
 MetalFilterCamera.xcodeproj/xcuserdata
+.idea/
